Incrementação do texto de introdução

--- a/APS1_isabelle_livia.ipynb
+++ b/APS1_isabelle_livia.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**APS | Parte 1: Exploratória**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
@@ -59,7 +66,38 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**INTRODUÇÃO**\n",
+    "\n",
+    "Os Objetivos de Desenvolvimento Sustentável (ODS), estabelecidos pela Organização das Nações Unidas (ONU) em 2015, propõe aos 193 Estados-membros da ONU a adoção de um plano de ação global que definiu um quadro de 17 objetivos a serem trabalhados pelas nações até o ano de 2030. Desse modo, a agenda 2030 abrange três principais escopos para o desenvolvimento sustentável, são eles: social, ambiental e econômico. De acordo com a ONU, o segundo ODS, denominado como “Fome zero e Agricultura Sustentável”, tem por objetivo  “Erradicar a fome, alcançar a segurança alimentar, melhorar a nutrição e promover a agricultura sustentável”. \n",
+    "\n",
+    "Sendo a primeira meta do ODS em questão, a erradicação da fome é primordial para o estabelecimento de uma sociedade sustentável, tendo em vista que o acesso à alimentação adequada é um direito humano básico prescrito no artigo 25 da Declaração Universal dos Direitos Humanos. \n",
+    "\n",
+    "Ademais, o consumo de alimentos saudáveis na primeira infância – do nascimento até completar 6 anos -, segundo a Unicef, é essencial para o crescimento ideal do corpo e cérebro, de modo que, possibilita que a criança alcance todo seu potencial de desenvolvimento. Todavia, a desnutrição infantil é prejudicial, especialmente no que tange o comprometimento da aprendizagem, mediante ao mau desenvolvimento cerebral, além do risco à baixa imunidade, elevando a ocorrência de infecções que, por vezes, podem levar à morte. \n",
+    "\n",
+    "Nesse sentido, é de suma importância enfatizar que a fome e a subnutrição afetam também na propensão da população adulta a doenças, bem como na redução da produtividade, principal responsável pela geração de riqueza para as nações. Além disso, tal fator ainda impede o aumento da renda e, consequentemente, inviabiliza a melhoria dos meios de vida da população. \n",
+    "\n",
+    "Desse modo, com o fito de monitorar a evolução das medidas adotadas pelos países para o comprimento do objetivo, o Banco Mundial publica uma extensa base de dados sobre aspectos atrelados aos ODS. Nesse acervo, um dos indicadores que mede o desempenho do segundo objetivo é a “Prevalência De Insegurança Alimentar Grave Na População (%)”. De acordo com a professora da Faculdade de Medicina da UFMG, Elaine Machado, “a insegurança alimentar não é só a falta, mas também a substituição de alimentos ricos em nutrientes e vitaminas, por alimentos mais baratos, …, na tentativa de compensar o preço dos alimentos\". Com isso, tal indicador é uma forma de mensurar o sucesso das metas desse ODS: o alcance da segurança alimentar e, consequentemente, a erradicação da fome, já que quanto menor o índice de insegurança alimentar de determinado país, mais próximo essa nação está do objetivo estabelecido.\n",
+    "\n",
+    "Infere-se,  portanto que, os ODS de “Fome zero e Agricultura Sustentável” é de extrema relevância para que as nações atinjam as demais metas, visto que, a mesma impacta em diversos fatores relacionados ao fim da pobreza, proteção do meio ambiente e clima, além da garantia de que as todas as pessoas possam desfrutar da paz e prosperidade."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**FONTES**\n",
+    "\n",
+    "Nações Unidas. 2 Fome zero e agricultura sustentável. Disponível em: https://sdgs.un.org/goals/goal2 Acessado em 30/08/2022.\n",
+    "\n",
+    "UNICEF. Declaração Universal dos Direitos Humanos. Disponível em: https://www.unicef.org/brazil/declaracao-universal-dos-direitos-humanos Acessado em 30/08/2022.\n",
+    "\n",
+    "UNICEF. Má alimentação prejudica a saúde de milhões de crianças em todo o mundo, alerta o UNICEF. Disponível em : https://www.unicef.org/brazil/comunicados-de-imprensa/ma-alimentacao-prejudica-saude-das-criancas-em-todo-o-mundo-alerta-o-unicef  Acessado em 30/08/2022.\n",
+    "\n",
+    "Faculdade de Medicina UFMG. Insegurança alimentar cresce no país e aumenta vulnerabilidade à Covid-19. Disponível em: https://www.medicina.ufmg.br/inseguranca-alimentar-cresce-no-pais-e-aumenta-vulnerabilidade-a-covid-19/ Acessado em 30/08/2022.\n",
+    "\n",
+    "Base de dados: https://datacatalog.worldbank.org/search/dataset/0037918/Sustainable-Development-Goals \n"
+   ]
   }
  ],
  "metadata": {
