--- a/APS1_isabelle_livia.ipynb
+++ b/APS1_isabelle_livia.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**APS | Parte 1: Exploratória**"
+    "**APS | Parte 1: Exploratória**\n",
+    "\n",
+    "Integrantes:\n",
+    "* Isabelle Da Silva Santos\n",
+    "* Livia Tanaka"
    ]
   },
   {
