gráfico e cálculo de correlação e covariância

--- a/APS2-correlacoes.ipynb
+++ b/APS2-correlacoes.ipynb
@@ -12,6 +12,124 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df_ia = pd.read_csv('dados/inseguranca_alimentar/70397afd-e704-4908-930d-3fc65e331775_Data.csv')\n",
+    "df_tm = pd.read_csv('dados/taxa_mortalidade/52db136a-1fc5-4f27-ab83-5206ac756f1e_Data.csv')\n",
+    " \n",
+    "filtro = ['Country Name', '2015 [YR2015]','2016 [YR2016]','2017 [YR2017]', '2018 [YR2018]', '2019 [YR2019]']\n",
+    "df_ia_ = df_ia[filtro]\n",
+    "df_tm_ = df_tm[filtro]\n",
+    "\n",
+    "df_ia_.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paises = {'Brazil': [[],[]], 'Norway':[[],[]], 'Afghanistan':[[],[]]}\n",
+    "for pais in paises:\n",
+    "    df_inseguranca = df_ia_[df_ia_['Country Name'] == pais]\n",
+    "    df_mortalidade = df_tm_[df_tm_['Country Name'] == pais]\n",
+    "    for ano in range(2015,2020):\n",
+    "        data = str(ano) + ' [YR'+str(ano)+']'\n",
+    "        i = df_inseguranca[data]\n",
+    "        m = df_mortalidade[data]\n",
+    "        paises[pais][0].append(i)\n",
+    "        paises[pais][1].append(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_ia_ = df_ia_.set_index('Country Name')\n",
+    "df_tm_ = df_tm_.set_index('Country Name')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "correlacoes = []\n",
+    "covariancias = []\n",
+    "for pais in paises:\n",
+    "    df_inseguranca = pd.DataFrame(df_ia_.loc[pais])\n",
+    "    df_mortalidade = pd.DataFrame(df_tm_.loc[pais])\n",
+    "\n",
+    "    df_inseguranca.rename(columns={str(pais): 'Insegurança Alimentar'}, inplace=True)\n",
+    "    df_mortalidade.rename(columns={str(pais): 'Mortalidade'}, inplace=True)\n",
+    "    \n",
+    "    # ambos = pd.concat((df_inseguranca,df_mortalidade),axis=1)\n",
+    "    correlacao = np.corrcoef(df_inseguranca['Insegurança Alimentar'], df_mortalidade['Mortalidade'])[0,1]\n",
+    "    covariancia = np.cov(df_inseguranca['Insegurança Alimentar'], df_mortalidade['Mortalidade'])[0,1]\n",
+    "\n",
+    "    correlacoes.append(correlacao)\n",
+    "    covariancias.append(covariancia)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print('             |     Brasil      Noruega    Afeganistão')\n",
+    "print('            ------------------------------------------')\n",
+    "print(f'COVARIÂNCIAS |     {covariancias[0]:.3f}       {covariancias[1]:.3f}       {covariancias[2]:.3f}')\n",
+    "print(f'CORRELAÇÕES  |     {correlacoes[0]:.3f}       {correlacoes[1]:.3f}       {correlacoes[2]:.3f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.lines import Line2D\n",
+    "import pandas as pd \n",
+    "\n",
+    "plt.style.use('default')\n",
+    "anos = list(range(2015, 2020))\n",
+    "porcentagem = list(range(0,22,2))\n",
+    "plt.figure(figsize=(10,7))\n",
+    "plt.title('Índice de insegurança alimentar severa na população')\n",
+    "\n",
+    "# insegurança alimentar\n",
+    "plt.plot(anos, paises['Brazil'][0], marker='.',color='b',label='Brasil')\n",
+    "plt.plot(anos, paises['Norway'][0], marker='.',color='r', label='Noruega (país avançado)')\n",
+    "plt.plot(anos, paises['Afghanistan'][0], marker='.',color='g', label='Afeganistão (país atrasado)')\n",
+    "\n",
+    "# taxa de mortalidade\n",
+    "plt.plot(anos, paises['Brazil'][1], marker='.',linestyle = '--',color='b',label='Brasil')\n",
+    "plt.plot(anos, paises['Norway'][1], marker='.',linestyle = '--',color='r', label='Noruega (país avançado)')\n",
+    "plt.plot(anos, paises['Afghanistan'][1], marker='.',linestyle = '--',color='g', label='Afeganistão (país atrasado)')\n",
+    "\n",
+    "plt.xticks(anos)\n",
+    "plt.xlabel('Tempo (anos)')\n",
+    "plt.ylabel('População (%)')\n",
+    "plt.yticks()\n",
+    "# ledenda\n",
+    "\n",
+    "estilo1= Line2D([0,1],[0,1],linestyle='--', color='black')\n",
+    "estilo2 = Line2D([0,1],[0,1],linestyle='-', color='black')\n",
+    "\n",
+    "cor1 = Line2D([0,1],[0,1],marker='.', color='b')\n",
+    "cor2 = Line2D([0,1],[0,1],marker='.', color='r')\n",
+    "cor3 = Line2D([0,1],[0,1],marker='.', color='g')\n",
+    "plt.legend([estilo1, estilo2, cor1, cor2, cor3],['Taxa de mortalidade','Insegurança alimentar', 'Brasil', 'Noruega', 'Afeganistão'])\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
