tabela de correlações e covariâncias

--- a/APS2-correlacoes.ipynb
+++ b/APS2-correlacoes.ipynb
@@ -13,9 +13,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>2015 [YR2015]</th>\n",
+       "      <th>2016 [YR2016]</th>\n",
+       "      <th>2017 [YR2017]</th>\n",
+       "      <th>2018 [YR2018]</th>\n",
+       "      <th>2019 [YR2019]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>15.1</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>17.3</td>\n",
+       "      <td>19.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Country Name  2015 [YR2015]  2016 [YR2016]  2017 [YR2017]  2018 [YR2018]  \\\n",
+       "0       Brazil            1.9            1.8            1.7            1.6   \n",
+       "1       Norway            1.1            1.2            1.1            1.1   \n",
+       "2  Afghanistan           14.8           15.1           17.3           17.3   \n",
+       "3          NaN            NaN            NaN            NaN            NaN   \n",
+       "4          NaN            NaN            NaN            NaN            NaN   \n",
+       "\n",
+       "   2019 [YR2019]  \n",
+       "0            3.5  \n",
+       "1            1.0  \n",
+       "2           19.8  \n",
+       "3            NaN  \n",
+       "4            NaN  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "df_ia = pd.read_csv('dados/inseguranca_alimentar/70397afd-e704-4908-930d-3fc65e331775_Data.csv')\n",
@@ -30,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,9 +158,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             |     Brasil      Noruega    Afeganistão\n",
+      "            ------------------------------------------\n",
+      "COVARIÂNCIAS |     -0.150       0.020       -0.254\n",
+      "CORRELAÇÕES  |     -0.560       0.791       -0.961\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "correlacoes = []\n",
@@ -78,13 +189,84 @@
     "\n",
     "    correlacoes.append(correlacao)\n",
     "    covariancias.append(covariancia)\n",
-    "\n",
-    "\n",
-    "\n",
-    "print('             |     Brasil      Noruega    Afeganistão')\n",
-    "print('            ------------------------------------------')\n",
-    "print(f'COVARIÂNCIAS |     {covariancias[0]:.3f}       {covariancias[1]:.3f}       {covariancias[2]:.3f}')\n",
-    "print(f'CORRELAÇÕES  |     {correlacoes[0]:.3f}       {correlacoes[1]:.3f}       {correlacoes[2]:.3f}')\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>correlações</th>\n",
+       "      <th>covariancias</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>países</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Brasil</th>\n",
+       "      <td>-0.559503</td>\n",
+       "      <td>-0.1500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Noruega</th>\n",
+       "      <td>0.790569</td>\n",
+       "      <td>0.0200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Afeganistão</th>\n",
+       "      <td>-0.961020</td>\n",
+       "      <td>-0.2535</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             correlações  covariancias\n",
+       "países                                \n",
+       "Brasil         -0.559503       -0.1500\n",
+       "Noruega         0.790569        0.0200\n",
+       "Afeganistão    -0.961020       -0.2535"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame()\n",
+    "df['correlações'] = correlacoes\n",
+    "df['covariâncias'] = covariancias\n",
+    "df['países'] = ['Brasil', 'Noruega', 'Afeganistão']\n",
+    "df.set_index('países', inplace=True)\n",
+    "df.head()\n"
    ]
   },
   {
@@ -191,7 +373,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "de8d82a537434c4fa43e6d3a8b7a40c5d4b20c1d227b20a89f1f47ce0d6131e1"
+    "hash": "6c48627603363f23ad911ec4a91dbb51af42bd99b325b2e172c6699ffcf25f74"
    }
   }
  },
