correções de probabilidade

--- a/APS3-distribuicoes.ipynb
+++ b/APS3-distribuicoes.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,14 +144,14 @@
     "# de eles serem avançados ou não em relação à taxa deinsegurança severa\n",
     "def classifica_dado_avancado(classificacao):\n",
     "    if classificacao == 'avancado':\n",
-    "        return 'União Europeia'\n",
+    "        return 'UE'\n",
     "    else:\n",
-    "        return 'Organização dos Países Exportadores de Petróleo'\n"
+    "        return 'OPEP'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -173,12 +173,12 @@
     "    if i < n_OPEP:\n",
     "        b = indices_OPEP[i]\n",
     "        classifica2 = df_OPEP.loc[b]['classificacao']\n",
-    "        if classifica_dado_avancado(classifica2) == 'Organização dos Países Exportadores de Petróleo':\n",
+    "        if classifica_dado_avancado(classifica2) == 'OPEP':\n",
     "            if classifica2 == 'avancado':\n",
     "                certos['avancado OPEP'] += 1\n",
     "            else:\n",
     "                certos['atrasado OPEP'] += 1\n",
-    "    if classifica_dado_avancado(classifica1) == 'União Europeia':\n",
+    "    if classifica_dado_avancado(classifica1) == 'UE':\n",
     "        if classifica1 == 'avancado':\n",
     "            certos['avancado UE'] += 1\n",
     "        else:\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -207,27 +207,20 @@
     "# Probabilidade de acertos na classificação (acurácia por classe) para cada um dos blocos econômicos\n",
     "\n",
     "# União Europeia\n",
-    "P_acerto_av_UE = certos['avancado UE']/n_avancadoEue\n",
-    "P_acerto_at_UE = certos['atrasado UE']/(n_UE - n_avancadoEue)\n",
     "\n",
     "P_acerto_UE = (certos['atrasado UE'] + certos['avancado UE'])/ n_UE\n",
     "print(f'A probabilidade de acerto da classificação na União Europeia é de {P_acerto_UE}')\n",
     "\n",
-    "# P_acerto_av_OPEP = certos['avancado OPEP']/n_avancadoEopep, como seria uma divisão de 0 por 0, ou seja, não \n",
-    "# há países avançados na OPEP e nenhum avançado foi classificado como membro desse bloco\n",
-    "# pode-se dizer que a probabilidade é de 100% de acerto\n",
-    "P_acerto_av_OPEP = 1.0\n",
-    "P_acerto_at_OPEP = certos['atrasado OPEP']/(n_OPEP - n_avancadoEopep)\n",
     "\n",
+    "# Organização dos Países Exportadores de Petróleo\n",
     "P_acerto_OPEP = (certos['atrasado OPEP'] + certos['avancado OPEP'])/n_OPEP\n",
-    "\n",
     "print(f'A probabilidade de acerto da classificação na Organização dos Países Exportadores de Petróleo é de {P_acerto_OPEP}')\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
