Implementando Análise descriva | APS4

--- a/APS4-teste_de_hipotese.ipynb
+++ b/APS4-teste_de_hipotese.ipynb
@@ -228,7 +228,13 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Anteriormente, foi estabelecido critério para classificar os países presentes na União Europeia (UE) e Organização dos Países Exportadores de Petróleo (OPEP) como “avançados” ou “atrasados”. Uma das ferramentas utilizadas para verificar sua operacionalidade no controle estatístico de qualidade foi o bootstrap. Por definição, o bootstrap [“estima a distribuição de amostragem que coleta várias amostras com reposição de uma amostra aleatória única. Essas amostras repetidas são chamadas reamostras. Cada reamostra é do mesmo tamanho da amostra original”](https://support.minitab.com/pt-br/minitab/20/help-and-how-to/probability-distributions-random-data-and-resampling-analyses/supporting-topics/resampling-analyses/what-is-bootstrapping/). \n",
+    "\n",
+    "A partir de cada uma dessas reamostragens foi calculada a probabilidade de um elemento da reamostra ser avançado dado que ele pertence ao seu respectivo bloco. Baseado nesse conjunto de probabilidades, foi determinado um intervalo de confiança de 90% ao definir os limites como o percentil de 5% e o outro de 95%. Dessa forma, enquanto o intervalo da UE foi de 0.6 a 0.88, o da OPEP foi de 0 a 0.\n",
+    "\n",
+    "Ao analisar os resultados obtidos através do bootstrap, é possível notar que não há sobreposição dos intervalos de confiança. Essa disparidade entre os limites ocorreu devido ao fato de que na OPEP não há países classificados como “avançados”, ou seja, a probabilidade calculada sempre resultará em 0. Assim, podemos inferir com segurança que os países da UE são tipicamente mais “avançados” que os da OPEP em relação ao indicador escolhido. \n"
+   ]
   },
   {
    "cell_type": "markdown",
